--- a/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-server/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/MarcinCzekaj00/environment-variable-repo.git
+          uri: https://github.com/MarcinCzekaj00/ticket-repository/tree/main/environment-variable
 
 server:
   port: ${port:8888}
