--- a/property-access-service/src/main/resources/application.yml
+++ b/property-access-service/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 spring:
   application:
     name: property-access-service
-
+  profiles:
+    active: default
+    
 server:
   port: ${port:8000}
 
